opam-version: "1.2"
version: "v0.9.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/sexplib"
bug-reports: "https://github.com/janestreet/sexplib/issues"
dev-repo: "https://github.com/janestreet/sexplib.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "sexplib" "--root" "." "-j" jobs "@install"]
]
depends: [
  "jbuilder" {build & >= "1.0+beta2"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Library for serializing OCaml values to and from S-expressions

Part of Jane Street's Core library
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"
